targets controller can add target
